name:                zip

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            A zip library
description:         A zip library
license:             MIT
license-file:        LICENSE
author:              Kai Sellgren
maintainer:          kaisellgren@gmail.com
category:            Data

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8, vector
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite all
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base, vector
  default-language:    Haskell2010
